--- a/CS624_Project.ipynb
+++ b/CS624_Project.ipynb
@@ -2344,31 +2344,31 @@
       "cell_type": "markdown",
       "source": [
         "<center>\n",
-        "<img src = \"https://raw.githubusercontent.com/aj-broderick/cs625/main/semesterproject/Maps.png\">\n",
+        "<img src = \"https://github.com/aj-broderick/ODU-CS624/blob/main/images/Maps.png\">\n",
         "</center>\n",
         "\n",
         "<br>\n",
         "\n",
         "<center>\n",
-        "<img src = \"https://raw.githubusercontent.com/aj-broderick/cs625/main/semesterproject/Heattree.png\">\n",
+        "<img src = \"https://github.com/aj-broderick/ODU-CS624/blob/main/images/Heattree.png\">\n",
         "</center>\n",
         "\n",
         "<br>\n",
         "\n",
         "<center>\n",
-        "<img src = \"https://raw.githubusercontent.com/aj-broderick/cs625/main/semesterproject/Unit BoxWhisker_1.png\">\n",
+        "<img src = \"https://github.com/aj-broderick/ODU-CS624/blob/main/images/Unit BoxWhisker_1.png\">\n",
         "</center>\n",
         "\n",
         "<br>\n",
         "\n",
         "<center>\n",
-        "<img src = \"https://raw.githubusercontent.com/aj-broderick/cs625/main/semesterproject/Unit BoxWhisker_2.png\">\n",
+        "<img src = \"https://github.com/aj-broderick/ODU-CS624/blob/main/images/Unit BoxWhisker_2.png\">\n",
         "</center>\n",
         "\n",
         "<br>\n",
         "\n",
         "<center>\n",
-        "<img src = \"https://raw.githubusercontent.com/aj-broderick/cs625/main/semesterproject/Treemap.png\">\n",
+        "<img src = \"https://github.com/aj-broderick/ODU-CS624/blob/main/images/Treemap.png\">\n",
         "</center>"
       ],
       "metadata": {
